<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_screen_bg_color"
    tools:context=".mvp.views.GameScreen">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/linear1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/linear3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />
    <!--    head-->

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_2048"
        style="@style/style_main_1"
        android:text="@string/_2048"
        app:layout_constraintBottom_toTopOf="@+id/linear2"
        app:layout_constraintEnd_toStartOf="@id/tv_score"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@+id/linear3"
        app:layout_constraintTop_toTopOf="@+id/linear1"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_score"
        style="@style/score_style"
        app:layout_constraintBottom_toTopOf="@id/btnNew"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/tv_best"
        app:layout_constraintStart_toEndOf="@id/tv_2048"
        app:layout_constraintTop_toTopOf="@+id/tv_2048"
        app:layout_constraintVertical_chainStyle="spread_inside"
        tools:text="Score\n523" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_best"
        style="@style/best_style"
        app:layout_constraintBottom_toTopOf="@id/btnUndo"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/linear4"
        app:layout_constraintStart_toEndOf="@id/tv_score"
        app:layout_constraintTop_toTopOf="@+id/tv_score"
        app:layout_constraintVertical_chainStyle="spread_inside"
        tools:text="Best\n1200" />

    <!--    head-->

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnNew"
        style="@style/new_style"
        android:text="@string/new_1"
        app:layout_constraintBottom_toBottomOf="@+id/tv_2048"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@+id/tv_score"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tv_2048"
        app:layout_constraintTop_toBottomOf="@id/tv_score" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnUndo"
        style="@style/undo_style"
        android:text="@string/undo"
        app:layout_constraintBottom_toBottomOf="@+id/btnNew"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@+id/tv_best"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btnNew"
        app:layout_constraintTop_toBottomOf="@id/tv_best" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/linear2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <!--    game_section-->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/mainView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/main_style_4"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/linear4"
        app:layout_constraintStart_toStartOf="@+id/linear3"
        app:layout_constraintTop_toTopOf="@+id/linear2">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                style="@style/PlayButton"
                tools:text="0" />

            <TextView
                style="@style/PlayButton"
                tools:text="0" />

            <TextView
                style="@style/PlayButton"
                tools:text="0" />

            <TextView
                style="@style/PlayButton"
                tools:text="0" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                style="@style/PlayButton"
                tools:text="0" />

            <TextView
                style="@style/PlayButton"
                tools:text="0" />

            <TextView
                style="@style/PlayButton"
                tools:text="0" />

            <TextView
                style="@style/PlayButton"
                tools:text="0" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                style="@style/PlayButton"
                tools:text="0" />

            <TextView
                style="@style/PlayButton"
                tools:text="0" />

            <TextView
                style="@style/PlayButton"
                tools:text="0" />

            <TextView
                style="@style/PlayButton"
                tools:text="0" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                style="@style/PlayButton"
                tools:text="0" />

            <TextView
                style="@style/PlayButton"
                tools:text="0" />

            <TextView
                style="@style/PlayButton"
                tools:text="0" />

            <TextView
                style="@style/PlayButton"
                tools:text="0" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dialogRestart"
        style="@style/StyleDialogContainer"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/mainView"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@+id/mainView"
        app:layout_constraintStart_toStartOf="@+id/mainView"
        app:layout_constraintTop_toTopOf="@+id/mainView">

        <TextView
            android:id="@+id/restart_title"
            style="@style/StyleDialogTitle"
            android:text="@string/restart_game"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.4" />

        <TextView
            android:id="@+id/restart_yes"
            style="@style/StyleDialogButton"
            android:text="@string/yes"
            app:layout_constraintEnd_toStartOf="@id/restart_no"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/restart_title" />

        <TextView
            android:id="@+id/restart_no"
            style="@style/StyleDialogButton"
            android:text="@string/no"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/restart_yes"
            app:layout_constraintTop_toBottomOf="@id/restart_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dialogWin"
        style="@style/StyleDialogContainer"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/mainView"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@+id/mainView"
        app:layout_constraintStart_toStartOf="@+id/mainView"
        app:layout_constraintTop_toTopOf="@+id/mainView">

        <TextView
            android:id="@+id/win_title"
            style="@style/StyleDialogTitle"
            android:text="@string/you_win"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.4" />

        <TextView
            android:id="@+id/win_restart"
            style="@style/StyleDialogButton"
            android:text="@string/restart"
            app:layout_constraintEnd_toStartOf="@id/win_home"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/win_title" />

        <TextView
            android:id="@+id/win_home"
            style="@style/StyleDialogButton"
            android:text="@string/home"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/win_restart"
            app:layout_constraintTop_toBottomOf="@id/win_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/dialogGameOver"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#40FFFFFF"
        android:fontFamily="@font/kavoon"
        android:gravity="center"
        android:text="@string/game_over"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/mainView"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@+id/mainView"
        app:layout_constraintStart_toStartOf="@+id/mainView"
        app:layout_constraintTop_toTopOf="@+id/mainView" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/linear4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />
    <!--    game_section-->

</androidx.constraintlayout.widget.ConstraintLayout>